--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,7 @@ html.lenis {
   --secondary-clr: hsl(12, 98%, 60%);
 
   --fs-normal: 1rem;
-  --fs-large: clamp(1rem, 1vw + 1rem, 10rem);
+  --fs-large: clamp(1rem, 5vw + 1rem, 10rem);
   --fs-xl: clamp(3rem, 9vw + 1rem, 10rem);
 }
 
@@ -99,7 +99,6 @@ h3 {
 body {
   background-color: var(--bg-clr-dark);
   font-family: "ff-body";
-  font-size: var(--fs-500);
 }
 
 p,
@@ -125,23 +124,71 @@ a {
 
 /* --- Regular Styles --- */
 header {
-  padding: 5rem 0.5rem 2rem 0.5rem;
+  padding: 5rem 0.5rem;
+}
+
+header > nav {
+  display: none;
 }
 
 .entry__title {
   font-family: "ff-body3";
+  font-size: var(--fs-large);
 }
 
 .entry__desc {
   font-family: "ff-text";
+  font-size: var(--fs-normal);
 }
 
-/* --- Media Queries--- */
-/* @media (min-width: 320px) {
-  :root {
+.entry {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-rows: 10rem auto;
+  grid-auto-rows: 0.4rem;
+  gap: 2rem;
+  margin-inline: 2rem;
+  margin-bottom: 5rem;
+}
+
+.entry::after {
+  content: "";
+  grid-column: span 2;
+  margin: 0 auto;
+  width: 90%;
+  height: 0.1rem;
+  background-color: var(--secondary-clr);
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.entry figure {
+  margin: 0;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.entry__media img {
+  border-radius: 2rem;
+}
+
+/* --- Media Queries---  */
+@media (min-width: 420px) {
+  /* :root {
     --fs-400: 1rem;
     --fs-500: 1.25rem;
     --fs-600: 1.5rem;
     --fs-xl: 5rem;
+  } */
+
+  .entry {
+    grid-template-columns: calc(10vw + 15rem) calc(10vw + 20rem);
+    grid-auto-rows: 0.4rem;
+    grid-template-rows: auto 1rem;
   }
-} */
+}
