--- a/src/styles.css
+++ b/src/styles.css
@@ -145,11 +145,10 @@ header > nav {
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-template-rows: 10rem auto;
-  grid-auto-rows: 0.4rem;
-  gap: 2rem;
+  grid-template-rows: 6rem auto 0.4rem;
+  row-gap: 2rem;
   margin-inline: 2rem;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 
 .entry::after {
@@ -158,12 +157,15 @@ header > nav {
   margin: 0 auto;
   width: 90%;
   height: 0.1rem;
-  background-color: var(--secondary-clr);
+  background-color: black;
 }
 
-img {
-  max-width: 100%;
-  display: block;
+.entry__meta {
+  grid-row: 1;
+}
+
+.entry__media {
+  grid-row: 2;
 }
 
 .entry figure {
@@ -173,12 +175,16 @@ img {
   justify-content: center;
 }
 
+.entry__media a {
+  cursor: pointer;
+}
+
 .entry__media img {
   border-radius: 2rem;
 }
 
 /* --- Media Queries---  */
-@media (min-width: 420px) {
+@media (min-width: 720px) {
   /* :root {
     --fs-400: 1rem;
     --fs-500: 1.25rem;
@@ -188,7 +194,13 @@ img {
 
   .entry {
     grid-template-columns: calc(10vw + 15rem) calc(10vw + 20rem);
-    grid-auto-rows: 0.4rem;
-    grid-template-rows: auto 1rem;
+    grid-template-rows: auto 1rem 0.4rem;
+    row-gap: 0;
+    column-gap: 4rem;
+  }
+
+  .entry__meta,
+  .entry__media {
+    grid-row: 1;
   }
 }
